# crossplane-rs-unofficial

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  release-plz.toml
.github/workflows/: docs.yaml  release.yaml
codegen/: Cargo.toml  README.md
codegen/src/: main.rs
example/: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  bucket.jsonschema  build.rs  claim.yaml  composition.yaml  crossplane-config-template.yaml  function.yaml  functions.yaml  kustomization.yaml  run.sh  xr.jsonschema  xr.yaml  xrd.yaml
example/configuration/: .gitignore  crossplane.yaml
example/configuration/input/: composition.yaml
example/crossplane-providers/: k8s.yaml  kustomization.yaml
example/example/: README.md  function.yaml  k3d.yaml  run.sh
example/example/function/: crossplane.yaml
example/example/function/input/: xrd.yaml
example/example/k3d/: kustomization.yaml
example/example/k3d/crossplane/: kustomization.yaml
example/example/k3d/crossplane-providers/: configuration-template.yaml  k8s.yaml
example/example/minikube/crossplane/: kustomization.yaml
example/example/minikube/crossplane-providers/: k8s.yaml
example/local_test/: README.md  crossplane-config-template.yaml  function.yaml  run.sh  xr.yaml
example/local_test/configuration/input/: composition.yaml
example/local_test/function/: crossplane.yaml
example/local_test/k3d/: kustomization.yaml
example/local_test/k3d/crossplane/: kustomization.yaml
example/local_test/k3d/crossplane-providers/: kustomization.yaml
example/minikube/: function.yaml  namespace.yaml  provider_config.yaml
example/minikube/crossplane-providers/: configuration-template.yaml  configuration.yaml  kustomization.yaml
example/package/input/: xrd.yaml
example/schema/: README.md  claimRef.yaml  kubernetes_object.jsonschema  xrd.yaml
example/src/: function.rs  lib.rs  main.rs
schema/: README.md
sdk/: CHANGELOG.md  Cargo.toml  README.md  build.rs
sdk/src/: error.rs  errors.rs  from_resource.rs  lib.rs  map_meta.rs  map_resource.rs  server.rs
src/: function.rs  lib.rs
