[package]
name = "crossplane-rust-example"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
tonic = { version = "0.13.0", features = ["tls-aws-lc"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
prost = "0.13.5"
prost-types = "0.13.5"
clap = { version = "4.5.37", features = ["derive", "env"] }
typify = "0.4.1"
serde = "1.0.219"
prost-wkt-types = "0.6.1"
serde_json = "1.0.140"
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }

[build-dependencies]
tonic-build = "0.13.0"

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
