[package]
name = "crossplane-fn-sdk-rs-unofficial-codegen"
version = "0.1.0"
edition = "2024"
description = "Tooling to generate Rust types from the Crossplane protobuf schema. For internal use in this sdk. Won't be published as a crate."
repository = "https://github.com/ngergs/crossplane-fn-sdk-rs-unofficial"
license = "MIT"
readme = "README.md"
publish = false

[lints.clippy]
pedantic = "warn"

[dependencies]
tonic-prost-build = { version = "0.14.1", features = ["cleanup-markdown"] }
itertools = "0.14.0"
tempfile = "3.21.0"
ureq = "3.1.0"
