[package]
name = "crossplane-rust-example-unofficial"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
crossplane-rust-sdk-unofficial = { path = "../sdk" }
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
# IO
typify = "0.4.1"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", default-features = false }

# see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
