[package]
name = "crossplane-rust-sdk-unofficial"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
# IO
tonic = { version = "0.13.1", features = ["tls-aws-lc"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
# can upgrade to 0.14 after we have a release for https://github.com/fdeantoni/prost-wkt/pull/83
prost = "0.13.5"
prost-types = "0.13.5"
prost-wkt-types = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.142"
# cli
clap = { version = "4.5.45", features = ["derive", "env"] }
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[build-dependencies]
tonic-build = "0.13.1"
