[package]
name = "crossplane-fn-sdk-unofficial"
version = "0.1.0"
edition = "2024"
description = "A sdk to write Crossplane composite functions in Rust. Technically composite functions are basically gRPC server."
repository = "https://github.com/ngergs/crossplane-fn-sdk-rs-unofficial"
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"

[features]
default = []
# Adds blanket implementation for `TryFromResource` and `TryIntoResource` for Kubernetes objects.
k8s-openapi = ["dep:k8s-openapi"]

[dependencies]
# IO
tonic = { version = "0.14.1", features = ["tls-aws-lc"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
# Generated code from crossplane protobuf
prost = "0.14.1"
prost-types = "0.14.1"
prost-wkt-types = "0.7.0"
tonic-prost = "0.14.1"
serde = "1.0.219"
serde_json = "1.0.143"
# cli
clap = { version = "4.5.45", features = ["derive", "env"] }
# K8s
k8s-openapi = { version = "0.25.0", optional = true }

[dev-dependencies]
tokio-test = { version = "0.4.4" }
